
	- new: added OpenGL/GLFW graph driver for better portability
	- new: added tooltip to CGI, enable with --tooltip option
	- new: duc database is now portable between endianess and
	       architectures for sqlite3 databases
	- new: added --ring-gap option to gui
	- new: added --color option to ui
	- cha: optimized memory usage
	- fix: fixed building on Solaris
	- fix: added better error handling in sqlite3 backend

1.2	(1015-05-11)

	- new: Added --dark option to duc-gui
	- fix: Fixed CGI file system traversing
	- fix: Fixed duc-info output to be consistent with other tools

1.1      (2015-05-09)

	- new: Added support for leveldb database backend
	- new: Some visual changes and performance improvements in duc-gui
	- new: Link to ncursesw if available for proper UTF-8 support in
	       duc-ui
	- fix: Fixed HTML and CGI escaping for duc-cgi
	- fix: Fixed unit scaling on 'humanized' formatted numbers
	- fix: Added UTF-8 charset declaration to duc-cgi
	- fix: Fatal errors are still printed in --quiet mode
	- fix: Better handling of non-printable characters in file names

1.0-rc1  (2015-04-25)

	- First release candidate for 1.0

